# numr

./: .gitignore  Cargo.toml  README.md  build.rs  flux.toml
.github/workflows/: baseline.yml  benchmark.yml  ci.yml  release.yml  test.yml
benches/: README.md  ci_regression.rs  fft.rs  indexing.rs  matmul.rs  minimal.rs  parallelism.rs  reduce.rs  shape_ops.rs
docs/: ARCHITECTURE_GUIDE.md  extending-numr.md
examples/: autograd_linear_regression.rs  backend_switch_cpu_wgpu.rs  basic_tensor_ops.rs  conv_unfold_im2col.rs  fft_roundtrip.rs  sparse_coo_csr_workflow.rs
src/: error.rs  lib.rs
src/algorithm/: fft.rs  iterative.rs  linalg.rs  matmul.rs  mod.rs  sparse.rs  sparse_linalg.rs  sparse_linalg_levels.rs  special.rs
src/algorithm/iterative/: helpers.rs  mod.rs  traits.rs  types.rs
src/algorithm/iterative_impl/: bicgstab.rs  gmres.rs  mod.rs
src/algorithm/linalg/: decompositions.rs  helpers.rs  matrix_functions_core.rs  mod.rs  tensor_decompose_core.rs  traits.rs
src/algorithm/polynomial/: helpers.rs  mod.rs  traits.rs  types.rs
src/algorithm/sparse_linalg/: levels.rs  mod.rs  symbolic.rs  traits.rs  types.rs
src/algorithm/sparse_linalg_cpu/: ic0.rs  ilu0.rs  mod.rs  triangular_solve.rs
src/algorithm/special/: bessel_coefficients.rs  constants.rs  helpers.rs  mod.rs  traits.rs
src/autograd/: backward.rs  checkpoint.rs  dual.rs  forward.rs  grad_fn.rs  grad_store.rs  mod.rs  var.rs  var_grad_store.rs  var_ops.rs
src/autograd/dual_ops/: activation.rs  arithmetic.rs  matmul.rs  mod.rs  reduce.rs  scalar.rs  shape.rs  unary.rs
src/autograd/ops/: activation.rs  arithmetic.rs  cast.rs  cumulative.rs  gemm_epilogue.rs  indexing.rs  linalg.rs  matmul.rs  mod.rs  normalization.rs  reduce.rs  scalar.rs  shape.rs  unary.rs
src/autograd/var_ops/: activation.rs  arithmetic.rs  cast.rs  conv.rs  conv1d.rs  conv2d.rs  conv_common.rs  cumulative.rs  dropout.rs  fused_activation_mul.rs  gemm_epilogue.rs  indexing.rs  linalg.rs  macros.rs  matmul.rs  mod.rs  normalization.rs  ops.rs  reduce.rs  scalar.rs  stats.rs  swiglu.rs  unary.rs  utility.rs
src/dtype/: complex.rs  data_type.rs  dtype_enum.rs  dtype_set.rs  element.rs  fp8.rs  half_util.rs  mod.rs  precision.rs  promotion.rs
src/ops/: activation.rs  arithmetic.rs  conv_common.rs  dispatch.rs  distance_common.rs  matmul.rs  mod.rs  reduce.rs  semiring.rs  special.rs
src/ops/common/: complex_validation.rs  mod.rs  quasirandom.rs
src/ops/cpu/: activation.rs  advanced_random.rs  binary.rs  compare.rs  complex.rs  conditional.rs  conv.rs  cumulative.rs  distance.rs  einsum.rs  fp8_matmul.rs  gemm_epilogue.rs  indexing.rs  linalg.rs  logical.rs  matmul.rs  mod.rs  multivariate.rs  normalization.rs  quasirandom.rs  random.rs  reduce.rs  scalar.rs  semiring_matmul.rs  shape.rs  sorting.rs  sparse_24.rs  statistics.rs  type_conversion.rs  unary.rs  utility.rs
src/ops/cuda/: activation.rs  advanced_random.rs  binary.rs  compare.rs  complex.rs  conditional.rs  conv.rs  cumulative.rs  distance.rs  einsum.rs  fp8_matmul.rs  gemm_epilogue.rs  indexing.rs  linalg.rs  logical.rs  matmul.rs  mod.rs  multivariate.rs  normalization.rs  quasirandom.rs  random.rs  reduce.rs  scalar.rs  semiring_matmul.rs  shape.rs  sorting.rs  sparse_24.rs  statistics.rs  type_conversion.rs  unary.rs  utility.rs
src/ops/impl_generic/: activation.rs  einsum.rs  linalg.rs  mod.rs  multivariate.rs  random.rs  shape.rs  utility.rs
src/ops/traits/: activation.rs  advanced_random.rs  binary.rs  compare.rs  complex.rs  conditional.rs  conv.rs  cumulative.rs  distance.rs  einsum.rs  fp8_matmul.rs  (+22 more)
src/runtime/: allocator.rs  captured_graph.rs  communicator.rs  fallback.rs  helpers.rs  kernel.rs  mod.rs  nexar_communicator.rs  shape_ops.rs  sparse_utils.rs  statistics_common.rs
src/sparse/: format.rs  mod.rs  ops.rs  structured.rs
src/tensor/: core.rs  id.rs  layout.rs  mod.rs  ops.rs  shape.rs  storage.rs  strides.rs
tests/: advanced_random_ops.rs  backend_parity_all.rs  complex_ops.rs  conv_ops.rs  cpu_runtime.rs  cumulative_ops.rs  eigendecomposition_ops.rs  external_backend_api.rs  fft_ops.rs  index_ops.rs  iterative_eigen.rs  iterative_solvers.rs  linalg_statistics_ops.rs  matmul_bias.rs  matmul_perf.rs  matrix_functions_expm.rs  matrix_functions_logm.rs  matrix_functions_other.rs  matrix_functions_sqrtm.rs  ml_dtype_audit.rs  polynomial_ops.rs  random_ops.rs  reduction_ops.rs  shape_ops.rs  sort_ops.rs  sparse_ops.rs  special_functions.rs  statistics_cov.rs  statistics_histogram.rs  statistics_mode.rs  statistics_moments.rs  statistics_ops.rs  statistics_quantile.rs  svd_ops.rs  wgpu_buffer_lifetime.rs  wgpu_integer_ops.rs  wmma_throughput.rs
tests/backend_parity/: activation.rs  advanced_random.rs  binary.rs  cast.rs  compare.rs  complex.rs  conditional.rs  conv.rs  cumulative.rs  distance.rs  dtype_helpers.rs  eigen.rs  einsum.rs  fft.rs  fp8_matmul.rs  fused_elementwise.rs  gemm_epilogue.rs  helpers.rs  indexing.rs  indexing_advanced.rs  iterative_eigen.rs  iterative_solvers.rs  iterative_solvers_advanced.rs  linalg.rs  logical.rs  matmul.rs  matmul_bias.rs  matrix_functions_expm.rs  matrix_functions_logm.rs  matrix_functions_other.rs  matrix_functions_sqrtm.rs  mod.rs  multivariate.rs  normalization.rs  polynomial.rs  random.rs  reduce.rs  scalar.rs  semiring_matmul.rs  shape.rs  (+8 more)
tests/common/: mod.rs
tests/index_ops/: advanced.rs  embedding.rs  gather_scatter.rs  masked.rs
tests/statistics_common/: mod.rs
(+1094 files in other folders)
