[package]
name = "numr"
version = "0.0.0-beta.1"
edition = "2024"
rust-version = "1.89"
description = "High-performance numerical computing with multi-backend GPU acceleration (CPU/CUDA/WebGPU)"
license = "Apache-2.0"
repository = "https://github.com/ml-rust/numr"
documentation = "https://docs.rs/numr"
keywords = ["tensor", "ndarray", "fft", "linear-algebra", "gpu"]
categories = ["science", "mathematics", "data-structures"]

[features]
default = ["cpu", "rayon"]
cpu = []
cuda = ["dep:cudarc"]
wgpu = ["dep:wgpu", "dep:pollster"]
rayon = ["dep:rayon"]
f16 = ["dep:half", "cudarc?/f16"]
fp8 = []                            # 8-bit floating point types (FP8E4M3, FP8E5M2)
sparse = []                         # Sparse tensor formats (CSR, CSC, COO) and operations

[dependencies]
# Core
thiserror = "2.0"
smallvec = "1"
bytemuck = { version = "1.24", features = ["derive"] }
num-traits = "0.2"
parking_lot = "0.12"

# Optional: Parallelism
rayon = { version = "1.11", optional = true }

# Random number generation (required for rand/randn operations)
rand = "0.9"
rand_distr = "0.5"

# Zero-copy serialization for embedded data 
rkyv = "0.8"

# Optional: Half-precision floats
half = { version = "2.7", optional = true, features = ["bytemuck"] }

# Optional: CUDA backend
cudarc = { version = "0.18", optional = true, features = [
  "cuda-version-from-build-system",
] }

# Optional: WebGPU backend
wgpu = { version = "28.0", optional = true }
pollster = { version = "0.4", optional = true }
paste = "1.0.15"

[dev-dependencies]
approx = "0.5"
rand = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1
